--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -102,14 +102,14 @@
       
               <header id=header>
 
-                <div class="left">
+                <div class="main">
                   <a class="menu_button">
                     <i class="fas fa-bars"></i>
                   </a>
                   <a href="/" class="logo">Necro Cult</a>
                 </div>
 
-                <div class="right">
+                <div class="secondary">
                   <div class="social">
                     <a href="#" target="_blank"><i class="fab fa-facebook-square"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
