--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,6 +5,12 @@ CONTENTS
 ********************************************/
 
 
+
+/********************************************
+
+GENERAL
+
+********************************************/
 @media all and (max-width: 1000px) {
   .container{
 	padding: 15px 35px;
@@ -12,10 +18,16 @@ CONTENTS
 }
 @media all and (max-width: 400px) {
   .container{
-	padding: 15px 15px;
+	padding: 15px 25px;
   }
 }
 
+
+/********************************************
+
+HEADER/FOOTER/NAV
+
+********************************************/
 
 
 /********************************************
@@ -34,6 +46,9 @@ HOME
 	  .home_1>.container>.main{
 	  	width: 100%;
 	  	margin-bottom: 50px;
+	  }
+	   .home_1>.container>.secondary{
+	  	display: none;
 	  }
 	}
 
