--- a/css/kvlt-framework.css
+++ b/css/kvlt-framework.css
@@ -173,7 +173,7 @@ HEADER/FOOTER/NAV
       transition: 0.25s;
       border-bottom: 2px solid var(--white);
     }
-    #header .left .logo {
+    #header .main .logo {
       font-family: 'OldEnglish', cursive;
       color: var(--white);
       text-decoration: none;
@@ -185,27 +185,27 @@ HEADER/FOOTER/NAV
       cursor: pointer;
       transition: 0.25s ease-in-out;
     }
-    #header .left .logo:hover {
+    #header .main .logo:hover {
       color: var(--white);
       text-shadow: var(--text-shadow-red);
     }
-    #header .left .menu_button {
+    #header .main .menu_button {
       margin-right: 50px;
       font-size: 3.6rem;
       display: inline-block;
       cursor: pointer;
       transition: 0.25s ease-in-out;
     }
-    #header .left .menu_button:hover {
+    #header .main .menu_button:hover {
       color: var(--red);
     }
-    #header .right .social a {
+    #header .secondary .social a {
       color: var(--white);
       font-size: 2.4rem;
       margin: 0 10px;
       transition: 0.25s ease-in-out;
     }
-    #header .right .social a:hover {
+    #header .secondary .social a:hover {
       color: var(--red);
     }
 
@@ -462,6 +462,7 @@ ELEMENTS
       color: var(--black);
       font-size: 5.5rem;
       font-family: var(--old-english);
+      text-align: center;
       text-decoration: none;
       padding:15px 35px;
       display: inline-block;
