--- a/_includes/sidebar_1.njk
+++ b/_includes/sidebar_1.njk
@@ -18,8 +18,8 @@
 		      </div>
 
 			<div class="swiper-slide">
-				<a href="https://judasbeastco.com/" target="_blank">
-					<img src="/img/sidebar/judas-beast-ad.jpg" alt="Judas Beast - Clothes for Metalheads and Metal Pets">
+				<a href="https://dungeonmasteraudio.com/" target="_blank">
+					<img src="/img/sidebar/dma-ad.jpg" alt="Dungeon Master Audo">
 				</a>
 			</div>
 
