--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -68,7 +68,7 @@
         </a>
         <a href="#">
           <i class="fas fa-cross"></i>
-          Reviews
+          Articles
           <i class="fas fa-cross"></i>
         </a>
         <a href="#">
@@ -78,12 +78,7 @@
         </a>
         <a href="#">
           <i class="fas fa-cross"></i>
-          Blog
-          <i class="fas fa-cross"></i>
-        </a>
-        <a href="#">
-          <i class="fas fa-cross"></i>
-          Dev
+          About
           <i class="fas fa-cross"></i>
         </a>
       </div>
@@ -113,7 +108,6 @@
                   <div class="social">
                     <a href="#" target="_blank"><i class="fab fa-facebook-square"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
                   </div>
                 </div>
                 
