--- a/index.njk
+++ b/index.njk
@@ -14,9 +14,12 @@ eleventyNavigation:
 					<h1>The <span>Past</span> is <span>Alive</span></h1>
 				</div>
 				<div class="caption">
-					<p class="cut_out">Necro Cult is an effort to recreate the look and feel of 80s and 90s underground metal zines, in the tradition, and in tribute of Slayer Mag, Helvete, and countless other fanzines created throughout the decades.  We aim not just to showcase the art, culture, and news of the metal underground, but to have the reading experience reflect the grime and grittiness of underground metal. </p>
-					<br><br>
+					<p class="cut_out">Necro Cult is an effort to recreate the look and feel of 80s and 90s underground metal zines, in the tradition, and in tribute of Slayer Mag, Helvete, and countless other fanzines created throughout the decades. Our mission is to have our site reflect the filth and sleaze of the extreme metal underground that we report on.  Album reviews, articles on older bands, and reporting on local shows and just a few of the subjects we cover here.</p>
+					<br>
+					<br>
 					<p class="cut_out">Hail Satan!  Brothers of Steel!  Death to False Metal!</p>
+					<br><br><br>
+					<a class="button_1 modal_open" data-modal="newsletter_modal">newsletter</a>
 				</div>
 			</div>
 
