--- a/index.njk
+++ b/index.njk
@@ -19,7 +19,7 @@ eleventyNavigation:
 					<br>
 					<p class="cut_out">Hail Satan!  Brothers of Steel!  Death to False Metal!</p>
 					<br><br><br>
-					<a class="button_1 modal_open" data-modal="newsletter_modal">newsletter</a>
+					<a class="cta modal_open" data-modal="newsletter_modal">Sign Up</a>
 				</div>
 			</div>
 
