--- a/index.njk
+++ b/index.njk
@@ -14,7 +14,7 @@ eleventyNavigation:
 					<h1>The <span>Past</span> is <span>Alive</span></h1>
 				</div>
 				<div class="caption">
-					<p class="cut_out">Necro Cult is an effort to recreate the look and feel of 80s and 90s underground metal zines, in the tradition, and in tribute of Slayer Mag, Helvete, and countless other fanzines created throughout the decades. Our mission is to have our site reflect the filth and sleaze of the extreme metal underground that we report on.  Album reviews, articles on older bands, and reporting on local shows and just a few of the subjects we cover here.</p>
+					<p class="cut_out">Rising from the festering slime of the extreme metal underground comes <span>Necro Cult</span>.  Through blasphemous sorcery and occult science, we bring forth the eldritch filth of our metalzine forefathers into this benighted age of technology. We spread the black gospel of metal through album reviews, reporting on local shows, and retrospectives on lesser known bands and subgenres.</p>
 					<br>
 					<br>
 					<p class="cut_out">Hail Satan!  Brothers of Steel!  Death to False Metal!</p>
