--- a/css/kvlt-framework.css
+++ b/css/kvlt-framework.css
@@ -986,6 +986,26 @@ EXTRAS
 SPECIAL FX 
 
 ********************************************/
+  /***** PAPER TEXTURE OVERLAY *****/
+  /*  
+    #texture_filter:after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100000%;
+      z-index: 10000;
+      pointer-events: none;
+      mix-blend-mode: screen;
+      opacity: .35;
+      background-color: #1a1a1a;
+      background-image: url(http://www.transparenttextures.com/patterns/cardboard.png);
+      background-repeat: repeat;
+      background-position: center;
+    }
+  */
 
   /***** FILM GRAIN OVERLAY *****/  
 
