--- a/css/variables.css
+++ b/css/variables.css
@@ -41,7 +41,7 @@ FULL WIDTH
 
   --old-english: 'OldEnglish', cursive;
   --germania: 'Germania One', cursive;
-  --mono: 'Source Code Pro', monospace;
+  --mono: 'typewriter', monospace;
   --serif: 'Spectral', serif;
   
   --short-transition: .25s ease-in-out;
