--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -21,13 +21,13 @@
           <div class="article-inner">
 
 
-            <div class="article-header title inner">
+            <div class="article-header title inner texture_paper_white">
               <!--<%- partial('post/title', {class_name: 'article-title'}) %>-->
               <a class="article-title" href="{{ post.url | url }}#more">{{ post.data.headline }}</a>
             </div>
 
 
-            <div class=" snippet inner" itemprop="articleBody">
+            <div class=" snippet inner texture_paper_white" itemprop="articleBody">
               <p>{{ post.data.snippet}}</p>
 
               <a class="read_more" href="{{ post.url | url }}#more">
