--- a/_includes/featured_slider.njk
+++ b/_includes/featured_slider.njk
@@ -8,12 +8,12 @@
 
          <article class="cut_paste">
            
-           <a href="{{ post.url | url }}#more" class="image">
+           <a href="{{ post.url | url }}#more" class="image texture_paper_white texture_paper">
              <img src="{{ post.data.image | url }}">
            </a>
 
            <div class="copy ">
-             <a href="{{ post.url | url }}#more" class="title inner">
+             <a href="{{ post.url | url }}#more" class="title inner texture_paper_black texture_paper">
                <h1 class="">{{ post.data.headline }}</h1>
              </a>
            </div>
