--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -46,7 +46,7 @@
 
     <div id="nav_overlay"></div>
   
-    <nav id="nav">
+    <nav id="nav" class="texture_dust_black">
       <div class="main">
         <a class="menu_button">
           <i class="fas fa-times"></i>
@@ -96,7 +96,7 @@
 
             <div class="outer">
       
-              <header id=header>
+              <header id="header" class="">
 
                 <div class="main">
                   <a class="menu_button">
