--- a/css/kvlt-framework.css
+++ b/css/kvlt-framework.css
@@ -503,6 +503,9 @@ ELEMENTS
       position: relative;
       flex-direction: row;
     }
+    li:first-of-type .article_preview{
+      margin-top: 50px;
+    }
     .article_preview:after {
       content: '';
       position: absolute;
@@ -581,6 +584,13 @@ ELEMENTS
         padding-left:50px;
       }
 
+      .article_preview>.copy .inner{
+        max-width: 600px;
+        margin-right: auto;
+        margin-left: auto;
+        background-color: transparent;
+      }
+
       /***** Title ****/
         .article_preview>.copy .title{
           font-family: 'OldEnglish', cursive;
@@ -594,8 +604,8 @@ ELEMENTS
           z-index: 15;
           background: var(--white);
           box-sizing: border-box;
+          overflow: visible;
           transition: .25s;
-
           transition-timing-function: ease-in-out;
           will-change: text-shadow;
         }
@@ -603,25 +613,43 @@ ELEMENTS
         .article_preview>.copy.cut_paste .title{
           box-shadow: 3px 3px 3px rgba(0,0,0,0.25);
           margin-bottom: 0;
+          padding-right: 120px;
           top: 10px;
           left: -15px;
           transform: rotate(4deg);
+          position: relative;
+          width: 100%;
         }
-        .article_preview>.copy .title a{
-          transition: .25s ease-in-out;
-        }
-        .article_preview>.copy .title a:hover{
-          text-shadow: var(--text-glow-red);
+
+        /***** Column ****/
+          .article_preview>.copy .title .column{
+            font-family: var(--mono);
+            font-size: 1.8rem;
+            color: var(--white);
+            background-color: var(--black);
+            display: inline-block;
+            padding: 5px 15px;
+            text-align: center;
+            position: absolute;
+            top: -20px;
+            right: -75px;
+            transform: rotate(20deg);
+          }
+        /***** Title - main ****/
+          .article_preview>.copy .title .title_main{
+            transition: .25s ease-in-out;
+            margin: 0;
+            font-family: 'OldEnglish', cursive;
+            font-size: 5rem;
+            line-height: 1.05;
+            font-weight: 300;
+            transform: rotate(2deg);
+          }
+          .article_preview>.copy .title .title_main:hover{
+            text-shadow: var(--text-glow-red);
+            
+          }
           
-        }
-        .article_preview>.copy .title>h3{
-          margin: 0;
-          font-family: 'OldEnglish', cursive;
-          font-size: 5rem;
-          line-height: 4.5rem;
-          font-weight: 300;
-          transform: rotate(2deg);
-        }
       
       /***** Body ****/
         .article_preview>.copy .snippet{
@@ -644,13 +672,16 @@ ELEMENTS
         .article_preview>.copy .snippet p{
           margin-bottom: 25px;
           transform: rotate(-2deg);
+          text-align: justify;
         }
 
         .article_preview>.copy .snippet .read_more{
+          color: var(--white);
           font-family: 'OldEnglish', cursive;
           font-size: 3.6rem;
           line-height: 3.6rem;
           display: inline-block;
+          padding: 10px 25px;
           text-decoration: none;
           transition: .25s;
           transition-timing-function: ease-in-out;
@@ -681,6 +712,11 @@ ELEMENTS
         }
         .article_preview.alt_1>.copy.cut_paste .snippet{
           padding-right:35px;
+          /*transform: rotate(-3deg);*/
+        }
+        .article_preview.alt_1>.copy .snippet p{
+          margin-bottom: 25px;
+          transform: rotate(-2deg);
         }
         
         .article_preview.alt_1>.image>a>img{
