--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -64,22 +64,22 @@
       <div class="links">
         <a href="#">
           <i class="fas fa-cross"></i>
-          Full Issues
+          <span>Full Issues</span>
           <i class="fas fa-cross"></i>
         </a>
         <a href="#">
           <i class="fas fa-cross"></i>
-          Articles
+          <span>Articles</span>
           <i class="fas fa-cross"></i>
         </a>
         <a href="#">
           <i class="fas fa-cross"></i>
-          News
+          <span>News</span>
           <i class="fas fa-cross"></i>
         </a>
         <a href="#">
           <i class="fas fa-cross"></i>
-          About
+          <span>About</span>
           <i class="fas fa-cross"></i>
         </a>
       </div>
