--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -62,24 +62,24 @@
         
       </div>
       <div class="links">
-        <a href="#">
+        <!--<a href="#">
           <i class="fas fa-cross"></i>
           <span>Full Issues</span>
           <i class="fas fa-cross"></i>
-        </a>
+        </a>-->
         <a href="#">
           <i class="fas fa-cross"></i>
-          <span>Articles</span>
-          <i class="fas fa-cross"></i>
-        </a>
-        <a href="#">
-          <i class="fas fa-cross"></i>
-          <span>News</span>
+          <span>Archives</span>
           <i class="fas fa-cross"></i>
         </a>
         <a href="#">
           <i class="fas fa-cross"></i>
           <span>About</span>
+          <i class="fas fa-cross"></i>
+        </a>
+        <a href="#">
+          <i class="fas fa-cross"></i>
+          <span>Merch</span>
           <i class="fas fa-cross"></i>
         </a>
       </div>
