--- a/archive.njk
+++ b/archive.njk
@@ -12,7 +12,7 @@ eleventyNavigation:
 </section>
 
 <section class="container" style="padding-bottom: 200px;">
-	{% set postslist = collections.posts %}
+	{% set postslist = collections.posts | reverse %}
 	{% include "postslist.njk" %}
 </section>
 
