--- a/index.njk
+++ b/index.njk
@@ -50,7 +50,7 @@ eleventyNavigation:
 		</div>
 
 
-		{% set postslist = collections.posts.slice(0, 3) %}
+		{% set postslist = collections.posts.slice(0, 3) | reverse %}
 		{% include "postslist.njk" %}
 
 		<!--<p>More posts can be found in <a href="{{ '/posts/' | url }}">the archive</a>.</p>-->
