--- a/css/kvlt-framework.css
+++ b/css/kvlt-framework.css
@@ -1,15 +1,33 @@
 
 
 
-/********************************************
+/************************************************************************************************************************************
 
 NOTES
 
-  KVLT framework file. This file is intended to 
-  be the primary CSS file for the Necro Cult 
-  lo-fi zine styling.
+  KVLT framework file. This file is intended to be the primary CSS file for the Necro Cult lo-fi zine styling.
 
-********************************************/
+
+                              ,-.
+         ___,---.__          /'|`\          __,---,___
+      ,-'    \`    `-.____,-'  |  `-.____,-'    //    `-.
+    ,'        |           ~'\     /`~           |        `.
+   /      ___//              `. ,'          ,  , \___      \
+  |    ,-'   `-.__   _         |        ,    __,-'   `-.    |
+  |   /          /\_  `   .    |    ,      _/\          \   |
+  \  |           \ \`-.___ \   |   / ___,-'/ /           |  /
+   \  \           | `._   `\\  |  //'   _,' |           /  /
+    `-.\         /'  _ `---'' , . ``---' _  `\         /,-'
+       ``       /     \    ,='/ \`=.    /     \       ''
+               |__   /|\_,--.,-.--,--._/|\   __|
+               /  `./  \\`\ |  |  | /,//' \,'  \
+              /   /     ||--+--|--+-/-|     \   \
+             |   |     /'\_\_\ | /_/_/`\     |   |
+              \   \__, \_     `~'     _/ .__/   /
+               `-._,-'   `-._______,-'   `-._,-'
+
+                       HAIL FUCKING SATAN
+************************************************************************************************************************************/
 
 
 
